Updated tutorial's chapter on Hotmoka nodes