@@ -32,38 +32,39 @@ import io.hotmoka.node.disk.DiskNodes;
 import io.takamaka.code.constants.Constants;
 
 /**
- * Run in the IDE or go inside this project and run
+ * Run it in Maven as:
  * 
- * mvn clean package
- * java --module-path ../../hotmoka/io-hotmoka-moka/modules/explicit/:../../hotmoka/io-hotmoka-moka/modules/automatic:target/runs-0.0.1.jar -classpath ../../hotmoka/io-hotmoka-moka/modules/unnamed"/*" --add-modules org.glassfish.tyrus.container.grizzly.server,org.glassfish.tyrus.container.grizzly.client --module runs/runs.Decorators
+ * mvn exec:exec -Dexec.executable="java" -Dexec.args="-cp %classpath io.hotmoka.tutorial.examples.Decorators"
  */
 public class Decorators {
-  public final static BigInteger SUPPLY = BigInteger.valueOf(1_000_000_000);
-
   public static void main(String[] args) throws Exception {
     var config = DiskNodeConfigBuilders.defaults().build();
 
     // the path of the runtime Takamaka jar, inside Maven's cache
     var takamakaCodePath = Paths.get
       (System.getProperty("user.home") +
-      "/.m2/repository/io/hotmoka/io-takamaka-code/" + Constants.TAKAMAKA_VERSION + "/io-takamaka-code-" + Constants.TAKAMAKA_VERSION + ".jar");
+      "/.m2/repository/io/hotmoka/io-takamaka-code/" + Constants.TAKAMAKA_VERSION
+      + "/io-takamaka-code-" + Constants.TAKAMAKA_VERSION + ".jar");
 
     // the path of the user jar to install
-    var familyPath = Paths.get("../family/target/family-0.0.1.jar");
+    var familyPath = Paths.get
+      (System.getProperty("user.home") +
+      "/.m2/repository/io/hotmoka/io-takamaka-code-examples-family/" + Constants.TAKAMAKA_VERSION
+      + "/io-takamaka-code-examples-family-" + Constants.TAKAMAKA_VERSION + ".jar");
 
     // create a key pair for the gamete
     var signature = SignatureAlgorithms.ed25519();
 	var entropy = Entropies.random();
-	KeyPair keys = entropy.keys("password", signature);
+	KeyPair keys = entropy.keys("mypassword", signature);
 	var consensus = ConsensusConfigBuilders.defaults()
-   		.setInitialSupply(SUPPLY)
-   		.setPublicKeyOfGamete(keys.getPublic()).build();
+   	  .setInitialSupply(BigInteger.valueOf(1_000_000_000))
+   	  .setPublicKeyOfGamete(keys.getPublic()).build();
 
 	try (var node = DiskNodes.init(config)) {
       // first view: store the io-takamaka-code jar and create manifest and gamete
 	  var initialized = InitializedNodes.of(node, consensus, takamakaCodePath);
 
-      // second view: store family-0.0.1.jar: the gamete will pay for that
+      // second view: store the family jar: the gamete will pay for that
       var nodeWithJars = JarsNodes.of(node, initialized.gamete(), keys.getPrivate(), familyPath);
 
 	  // third view: create two accounts, the first with 10,000,000 units of coin
@@ -73,7 +74,7 @@ public class Decorators {
         BigInteger.valueOf(10_000_000), BigInteger.valueOf(20_000_000));
 
       System.out.println("manifest: " + node.getManifest());
-      System.out.println("family-0.0.1.jar: " + nodeWithJars.jar(0));
+      System.out.println("family jar: " + nodeWithJars.jar(0));
       System.out.println("account #0: " + nodeWithAccounts.account(0) +
                          "\n  with private key " + nodeWithAccounts.privateKey(0));
       System.out.println("account #1: " + nodeWithAccounts.account(1) +
